# annotated-docs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
env/: README.md  env.lock.yml  env.yml
notebooks/examples/: test_function_calling.ipynb
src/annotated_docs/: __init__.py  func_call.py  json_schema.py
tests/: README.md  run_tests.sh
tests/annotated_docs_test/: json_schema_test.py
tools/: README.md  lock_env.sh  run_all.sh  run_formatting.sh  run_linters.sh
