[project]
name = "annotated-docs"
description = "Using Annotations to generate Json Schema from functions"
readme = "README.md"
version = "0.0.3"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dynamic = [
  "dependencies",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["env/requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
annotated_docs = ["py.typed"]

[project.urls]
Source = "https://github.com/peterroelants/annotated-docs"


# Tool configuration ###############################################
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
]
[tool.ruff.lint]
extend-select = [
    "I001"  # isort
]
ignore = [
  'E501',  # Line too long (E501)
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
